# simple-compiler

./: .gitignore  CMakeLists.txt  README.md
include/: OpCodes.hpp  analyzer.hpp  block.hpp  bril_parser.hpp  cfg.hpp  function.hpp  index_set.hpp  instruction.hpp  instruction_visitor.hpp  instructions.hpp  opcodes.hpp  operand.hpp  operands.hpp  program.hpp  transformer.hpp  util.hpp
include/analyzers/: cfg.hpp  dominator_analyzer.hpp  globals_analyzer.hpp
include/transformers/: cf_transformer.hpp  dce_transformer.hpp  dvn_transformer.hpp  early_ir_transformer.hpp  expression_simplifier.hpp  interpreter.hpp  ssa_transformer.hpp  sscp_transformer.hpp  transformer.hpp
src/: analyzer.cpp  bril_parser.cpp  cfg.cpp  function.cpp  index_set.cpp  instructions.cpp  main.cpp  operand.cpp  operands.cpp  parser.cpp  transformer.cpp
src/analyzers/: cfg.cpp  dominator_analyzer.cpp  globals_analyzer.cpp
src/transformers/: cf_transformer.cpp  dce_transformer.cpp  dvn_transformer.cpp  early_ir_transformer.cpp  expression_simplifier.cpp  interpreter.cpp  ssa_transformer.cpp  sscp_transformer.cpp
tests/: check_ssa.sh  is_ssa.py  out.baseline  out.cf  out.dce  out.dvn  out.ssa  test_analyzer.cpp  test_cfg.cpp  test_index_set.cpp  test_parser.cpp  test_transformer.py  test_utils.hpp
tests/bril/: 1dconv.bril  1dconv.json  ackermann.bril  add.bril  adler32.bril  bitwise-ops.bril  char.bril  cordic.json  dominator.bril  dominator.json  euclid.bril  float.bril  float.json  gol.bril  gol.json  mem.bril  palindrome.bril  positions.bril  print.bril  riemann.bril
